# to-do-manager

./: README.md  pyproject.toml
app/: config.py  main.py
